# mih

./: CMakeLists.txt  README.md  README.txt  RUN.sh  bucket_group.cpp  create_lsh_codes.m  sparse_hashtable.cpp
data/: inria  tiny
include/: array32.h  bitops.h  bucket_group.h  linscan.h  mihasher.h  sparse_hashtable.h  types.h
interface/: linscan_interface.cpp  loadVar.cpp  mih_interface.cpp  saveRes.cpp
matlab/: compactbit.m  plot_time.m
src/: array32.cpp  linscan.cpp  mihasher.cpp
test/: hammingDist.m  test_bucket_group.cpp  test_mih_with_linscan.m  test_mih_with_linscan.m~
